# KPM_4

./: CMakeLists.txt  Definitions.hxx  System.cxx  System.hxx  SystemHubbard2D.cxx  SystemHubbard2D.hxx  SystemHubbard3D.cxx  SystemHubbard3D.hxx  SystemWeyl.cxx  SystemWeyl.hxx  lattice_vector.cxx  lattice_vector.hxx  main.cpp  old stuff  old_code.hxx  plot.jl  solver.hxx
DONE STUFF/: AVG_Ms_Plot.csv  Us_Plot.csv
data/: DOS.csv  DOS_Plot.csv  DOS_Plot_Points.csv  DOSlocal_Plot.csv  DOSlocalover_Plot.csv  DOWN_Plot.csv  M.csv  M_Plot.csv  Ms_Plot.csv  UP_Plot.csv  Us_Plot.csv  data.csv  dos_great.csv  mag.csv  mu_dos.csv  mu_mag.csv  points.csv
python_scripts/: find_mag.py  plot_DOS.py  plot_M.py  plot_mu.py  ref_DOS.py
